--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,15 @@
 
     
 <!-- Analytics -->
- 
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M9M5CYYZR8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M9M5CYYZR8');
+</script>
 <!-- Analytics END -->
     
 </head>
