changed background images, colors and replaced text images with text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -76,9 +76,9 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/atlanta%20web%20designer%20mike.png" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<h2 class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
-				</h1>
+				</h2>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
@@ -93,7 +93,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="web agency, web design, logo design, atlanta agency, mike" src="img/title.png" />
+				<h1>I create websites and design graphics that help Atlanta companies become attractive and recognizable online.</h1>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -133,7 +133,8 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="web agency, web design, logo design " src="img/quote.png" />
+				<p class="text-center">"Mike's an awesome <b>freelance web designer</b>! He captured the essence of our company on our website and has helped us <b>double our online sales</b> for our shop in Atlanta."<br>
+				Taylor Cook, Project Manager - Apple Delights</p>
 			</div>
 		</div>
 	</div>
@@ -145,7 +146,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
-				<h2 class="mg-md text-center tc-white">
+				<h2 class="mg-md text-center text-center white">
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
 				<p class="text-center white">
@@ -162,7 +163,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-								<img alt="web agency, web design, logo design " src="img/title2.png" />
+				<h1>Websites that I've designed and developed for Atlanta companies that boosted local business.</h1>
 
 			</div>
 		</div>
