--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js" async></script>
-	<script src="./js/bootstrap.js" async></script>
-	<script src="./js/blocs.js" async></script>
-	<script src="./js/jquery.touchSwipe.js" async></script>
-	<script src="./js/gmaps.js" async></script>
+	<script async src="./js/jquery-2.1.0.js"></script>
+	<script async src="./js/bootstrap.js"></script>
+	<script async src="./js/blocs.js"></script>
+	<script async src="./js/jquery.touchSwipe.js"></script>
+	<script async src="./js/gmaps.js"></script>
 
-    <title>GoMike</title>
+    <title>.</title>
 
     
 <!-- Analytics -->
