updated meta tags and alt text

--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!doctype html>
 <html lang="Default">
 <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
-    <meta name="description" content="I'm Mike and your should hire me to build your website">
+    <!-- COMMON TAGS -->
+<meta charset="utf-8">
+<title>GoMike Designs</title>
+<!-- Search Engine -->
+<meta name="description" content="Get help with website design, website strategy, logo design, graphic design and more. Specializing in clients with businesses in or around Atlanta, GA.">
+<meta name="image" content="https://divineaverage.github.io/P4_SiteOptimization/">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="GoMike Designs">
+<meta itemprop="description" content="Get help with website design, website strategy, logo design, graphic design and more. Specializing in clients with businesses in or around Atlanta, GA.">
+<meta itemprop="image" content="https://divineaverage.github.io/P4_SiteOptimization/">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="GoMike Designs">
+<meta name="og:description" content="Get help with website design, website strategy, logo design, graphic design and more. Specializing in clients with businesses in or around Atlanta, GA.">
+<meta name="og:image" content="https://divineaverage.github.io/P4_SiteOptimization/img/atlanta%20web%20designer%20mike.avif">
+<meta name="og:url" content="https://divineaverage.github.io/P4_SiteOptimization/">
+<meta name="og:site_name" content="GoMike Designs">
+<meta name="fb:admins" content="1245632">
+<meta name="fb:app_id" content="123156468">
+<meta name="og:type" content="website">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -46,7 +63,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.avif" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.avif" alt="GoMike Designs logo in blue with an orange underline" height="40" /></a>
 					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -75,7 +92,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/atlanta%20web%20designer%20mike.avif" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
+				<img src="img/atlanta%20web%20designer%20mike.avif" class="center-block image-resize-mode" width="100" alt="cartoon drawing of a friendly-looking blonde man wearing a blue shirt with the word 'Hi' over his head." />
 				<h2 class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
 				</h2>
@@ -169,7 +186,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/11.avif" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/11.avif" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, design agency website for dog salon"/></a>
+				<a href="#" data-lightbox="img/11.avif" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/2.avif" class="img-responsive portfolio-thumb" alt="Fluffy white dog is in focus, with her owner and leash fading into the background on a city street."/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -178,7 +195,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.avif" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/2.avif" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, design agency website for best cupcakes in atlanta"/></a>
+				<a href="#" data-lightbox="img/2.avif" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/11.avif" class="img-responsive portfolio-thumb" alt="Four blue-frosted yellow cupcakes with round sprinkles sit on a pink table in front of a blue wall."/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
@@ -189,7 +206,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.avif" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/3.avif" class="img-responsive portfolio-thumb" alt="3.avif" /></a>
+				<a href="#" data-lightbox="img/3.avif" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/3.avif" class="img-responsive portfolio-thumb" alt="Tech and camera gear, such as a Macbook, grip, lens, stands, boom, and more sit organized neatly on a black table." /></a>
 				<h3 class="mg-md text-center">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
@@ -198,7 +215,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.avif" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.avif" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, Atlanta's legal website generates 30% more clients after web redesign" /></a>
+				<a href="#" data-lightbox="img/4.avif" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.avif" class="img-responsive portfolio-thumb" alt="A sharp young man in a blue suit with open collar and no tie sits buckled into a helicopter, smiling at the camera." /></a>
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
