--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<script async src="./js/jquery.touchSwipe.js"></script>
 	<script async src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>GoMike Designs</title>
 
     
 <!-- Analytics -->
@@ -62,13 +62,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.avif" alt="GoMike Designs logo in blue with an orange underline" height="40" /></a>
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
@@ -78,7 +72,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -97,7 +91,7 @@
 					I'm Mike.
 				</h2>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -148,12 +142,6 @@
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p class="text-center">"Mike's an awesome <b>freelance web designer</b>! He captured the essence of our company on our website and has helped us <b>double our online sales</b> for our shop in Atlanta."<br>
-				Taylor Cook, Project Manager - Apple Delights</p>
-			</div>
-		</div>
 	</div>
 </div>
 <!-- bloc-2-services END -->
@@ -164,11 +152,11 @@
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center text-center white">
-					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
+					Mike's an awesome <b>freelance web designer</b>! He captured the essence of our company on our website and has helped us <b>double our online sales</b> for our shop in Atlanta."<br>
+				
 				</h2>
 				<p class="text-center white">
-					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="page2.html">Are you ready, contact me</a><br>
-				</p>
+					Taylor Cook, Project Manager - Apple Delights</p>
 			</div>
 		</div>
 	</div>
@@ -188,19 +176,19 @@
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/11.avif" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/2.avif" class="img-responsive portfolio-thumb" alt="Fluffy white dog is in focus, with her owner and leash fading into the background on a city street."/></a>
 				<h3 class="mg-md text-center">
-					Website for Atlanta&rsquo;s premiere Dog Sitters
+					Website and logo creation
 				</h3>
 				<p class="text-center">
-					I love dogs and was super excited to make a website for an Atlanta dog company.
+					Created logo and designed a new website for an Atlanta dog company.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/2.avif" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/11.avif" class="img-responsive portfolio-thumb" alt="Four blue-frosted yellow cupcakes with round sprinkles sit on a pink table in front of a blue wall."/></a>
 				<h3 class="mg-md text-center">
-					Web redesign for the best Atlanta&nbsp;cupcakes
+					Web redesign and site optimization
 				</h3>
 				<p class="text-center">
-					They make the best cupcakes in Atlanta and I wanted to show this online.
+					Web redesign and site optimization for an Atlanta bakery.
 				</p>
 			</div>
 		</div>
@@ -208,19 +196,19 @@
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/3.avif" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/3.avif" class="img-responsive portfolio-thumb" alt="Tech and camera gear, such as a Macbook, grip, lens, stands, boom, and more sit organized neatly on a black table." /></a>
 				<h3 class="mg-md text-center">
-					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
+					New logo and website for Atl + Gear
 				</h3>
 				<p class="text-center">
-					Whenever I&rsquo;m wanting to improve my web design skills, this shop inspires me.
+					Created themed website and new logo for tech gear company.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.avif" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.avif" class="img-responsive portfolio-thumb" alt="A sharp young man in a blue suit with open collar and no tie sits buckled into a helicopter, smiling at the camera." /></a>
 				<h3 class="mg-md text-center">
-					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
+					New legal website and lead generation page
 				</h3>
 				<p class="text-center">
-					A few months ago, I created their new website and it&rsquo;s bringing lots of leads.
+					Helped increase a law office's lead generation by over 30% with a new website and custom lead generation forms.
 				</p>
 			</div>
 		</div>
@@ -236,7 +224,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
@@ -248,71 +236,41 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
-					GoMike Designs - Web designer living and loving Atlanta.<br>
-				</p>
+				<div class="footer__logo">
+					<img src="img/atlanta-webdesignlogo__white.avif" alt="GoMike Designs logo in white with an orange underline" height="40">
+				</div>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram"></span></a>
 						</div>
 					</div>
-
-					<div class="keywords" style="color:#364577;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-
 				</div>
 					<div class="row">
-					<div class="col-sm-4">
-						Partners
-							<ul>
-								<li><a href="car.com">car.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="myroof.com">myroof.com</a></li>
-								<li><a href="realestateseo.com">realestateseo.com</a></li>
-							</ul>		
-					</div>
-					<div class="col-sm-4">
-						Directories 1
-						<ul>
-							<li><a href="agencydirectory.com">agencydirectory.com</a></li>
-							<li><a href="seodirectory.com">seodirectory.com</a></li>
-							<li><a href="marketingdirectory.com">marketingdirectory.com</a></li>
-							<li><a href="123seo.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="wordpressdirectory.com">wordpressdirectory.com</a></li>
-							<li><a href="agencylistatl.com">agencylistatl.com</a></li>
-							<li><a href="bestagencyatl.com">bestagencyatl.com</a></li>
-							<li><a href="seolist.com">seolist.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Directories 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="yesseo.com">yesseo.com</a></li>
-							<li><a href="seojuicelink.com">seojuicelink.com</a></li>
-							<li><a href="bestlinks.com">bestlinks.com</a></li>
-							<li><a href="linkalot.com">linkalot.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuicedirectory.com">linkjuicedirectory.com</a></li>
-							<li><a href="rankongoogle.com">rankongoogle.com</a></li>
-							<li><a href="trustedseo.com">trustedseo.com</a></li>
-						</ul>
+						<div class="footer__lists">
+								<h2>Contact</h2>
+								<ul>
+									<li><a href="mailto:mike@gomikedesigns.com">Email Me</a></li>
+									<li>+1 (404) 555-1234</li>
+									<li>123 Peachtree Ave. Atlanta, GA</a></li>
+								</ul>
+							</div>
+						</div>		
 					</div>
 				</div>
 			</div>
