--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="en">
 <head>
     <!-- COMMON TAGS -->
 <meta charset="utf-8">
@@ -58,7 +58,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<section class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -78,11 +78,11 @@
 			</div>
 		</nav>
 	</div>
-</div>
+</section>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-hero -->
-<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -91,16 +91,16 @@
 					I'm Mike.
 				</h2>
 				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html"><button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</button></a>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-1-hero END -->
 
 <!-- bloc-2-services -->
-<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -143,11 +143,11 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine bloc-bg-texture texture-paper b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
+<section class="bloc tc-white bgc-atomic-tangerine bloc-bg-texture texture-paper b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -160,11 +160,11 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<article class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -213,26 +213,26 @@
 			</div>
 		</div>
 	</div>
-</div>
+</article>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="contact.html"><button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</button></a>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+<section class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -263,23 +263,20 @@
 				</div>
 					<div class="row">
 						<div class="footer__lists">
-								<h2>Contact</h2>
-								<ul>
-									<li><a href="mailto:mike@gomikedesigns.com">Email Me</a></li>
-									<li>+1 (404) 555-1234</li>
-									<li>123 Peachtree Ave. Atlanta, GA</a></li>
-								</ul>
-							</div>
-						</div>		
-					</div>
+							<h2>Contact</h2>
+							<ul>
+								<li><a href="mailto:mike@gomikedesigns.com">Email Me</a></li>
+								<li>+1 (404) 555-1234</li>
+								<li>123 Peachtree Ave. Atlanta, GA</li>
+							</ul>
+						</div>
+					</div>		
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-<!-- Footer - bloc-8 END -->
+</section>
 
-</div>
 <!-- Main container END -->
     
 
