updated ids for links

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					I'm Mike.
 				</h2>
 				<div class="text-center">
-					<a href="contact.html"><button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</button></a>
+					<a href="contact.html"><button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="contactbutton1">Contact</button></a>
 				</div>
 			</div>
 		</div>
@@ -224,7 +224,7 @@
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="contact.html"><button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</button></a>
+				<a href="contact.html"><button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="contactbutton2">Contact</button></a>
 			</div>
 		</div>
 	</div>
@@ -242,22 +242,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter"></span></a>
+							<a class="social" id="twitter__icon" href="index.html"><span class="fa fa-twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook"></span></a>
+							<a class="social" id="facebook__icon" href="index.html"><span class="fa fa-facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble"></span></a>
+							<a class="social" id="dribbble__icon" href="index.html"><span class="fa fa-dribbble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram"></span></a>
+							<a class="social" id="instagram__icon" href="index.html"><span class="fa fa-instagram"></span></a>
 						</div>
 					</div>
 				</div>
